[package]
name = "cdn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
atrium-api = { version = "0.25.0", default-features = false, features = ["tokio"] }
atrium-common = "0.1.0"
atrium-identity = "0.1.0"
atrium-xrpc = "0.12.1"
atrium-xrpc-client = "0.5.11"
aws-config = "1.5.17"
aws-sdk-s3 = "1.77.0"
axum = { version = "0.8.1", features = ["macros"] }
cid = "0.11.1"
lazy_static = "1.5.0"
libvips = "1.7.0"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "tracing"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
